# saga

./: CMakeLists.txt  README.md
include/saga/: AMRcell.h  AMRgrid.h  BaryonDensity.h  LocalProperties.h  MagneticField.h  Referenced.h  SQLiteInterface.h
include/sqlite3/: sqlite3ext.h
python/: Python.cmake  saga.i
share/saga/: saga.i
src/: AMRcell.cc  AMRgrid.cc  BaryonDensity.cc  LocalProperties.cc  MagneticField.cc  SQLiteInterface.cc  SQLiteThreadHandler.cc
test/: main.cc  mainTest.cc  performanceTest.cc  test-SAGA_CRPropa.py  threads.cc
tools/: distributions.cc  profiles.cc
utilities/: GetListOfSources.cpp  GetListOfSources2.cpp  SampleUniformGrid.cpp
